# rag-ncert-chatbot

./: .env  .gitignore  README.md  pyproject.toml
backend/: create_database.py
backend/app/: classifier.py  get_metadata.py  llm_with_rag.py  main.py  models.py  smart_agent.py
backend/utilities/: create_classifier.py  create_database.py  helper.py
frontend/app/: main.py
