[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "RAG agent for ncert data"
authors = ["Ayush Agrawal"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<4"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-chroma = "^0.1.4"
fastapi = {extras = ["standard"], version = "^0.115.0"}
langchain-google-genai = "^2.0.0"
langchain-core = "^0.3.6"
langchain-text-splitters = "^0.3.0"
streamlit = "^1.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
